--- a/Nosotros.html
+++ b/Nosotros.html
@@ -55,7 +55,7 @@
             <p>
                 Proporcionar servicios de contabilidad y asesoramiento financiero de alta calidad a nuestros clientes,
                 ayudándolos a tomar decisiones informadas y estratégicas para alcanzar sus objetivos financieros y
-                empresariales. Nos comprometemos a ofrecer soluciones personalizadas y innovadoras, basadas en nuestra
+                empresariales. Nos comprometemos a ofrecer soluciones personalizadas e innovadoras, basadas en nuestra
                 experiencia y conocimiento, para satisfacer las necesidades específicas de cada cliente.
             </p>
         </div>
