--- a/Nosotros.html
+++ b/Nosotros.html
@@ -11,17 +11,25 @@
 
 <body>
     <header class="header">
-        <nav class="nav container">
-            <a href="index.html" class="logo">DKLJ</a>
-            <ul class="nav__link">
-                <li><a href="index.html" class="nav__links">Inicio</a></li>
-                <li><a href="Nosotros.html" class="nav__links active">Nosotros</a></li>
-                <li><a href="contacto.html" class="nav__links">Contacto</a></li>
-                <li><a href="blog.html" class="nav__links">Blog</a></li>
-                <li><a href="portafolio.html" class="nav__links">Portafolio</a></li>
-            </ul>
-        </nav>
-    </header>
+  <nav class="nav container">
+    <a href="index.html" class="logo">DKLJ</a>
+
+    <!-- NUEVO: Botón hamburguesa -->
+    <button class="nav__toggle" id="nav-toggle">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </button>
+
+    <ul class="nav__link" id="nav-menu">
+      <li><a href="index.html" class="nav__links">Inicio</a></li>
+      <li><a href="Nosotros.html" class="nav__links active">Nosotros</a></li>
+      <li><a href="contacto.html" class="nav__links">Contacto</a></li>
+      <li><a href="blog.html" class="nav__links">Blog</a></li>
+      <li><a href="portafolio.html" class="nav__links">Portafolio</a></li>
+    </ul>
+  </nav>
+</header>
 
     <section class="hero__nosotros">
         <div class="container">
