--- a/Nosotros.html
+++ b/Nosotros.html
@@ -166,6 +166,14 @@
     </div>
   </div>
 </footer>
+    <script>
+  const toggle = document.getElementById('nav-toggle');
+  const menu = document.getElementById('nav-menu');
+
+  toggle.addEventListener('click', () => {
+    menu.classList.toggle('show');
+  });
+</script>
 </body>
 
 </html>
