--- a/Nosotros.html
+++ b/Nosotros.html
@@ -166,12 +166,12 @@
     </div>
   </div>
 </footer>
-    <script>
-  const toggle = document.getElementById('nav-toggle');
-  const menu = document.getElementById('nav-menu');
+<script>
+  const toggleBtn = document.getElementById('nav-toggle');
+  const navMenu = document.getElementById('nav-menu');
 
-  toggle.addEventListener('click', () => {
-    menu.classList.toggle('show');
+  toggleBtn.addEventListener('click', () => {
+    navMenu.classList.toggle('active');
   });
 </script>
 </body>
